# postgresql_homework

./: .gitignore  LICENSE  config.py  main.py  pyproject.toml  requirements.txt
src/: utils.py
